--- a/src/style/partials/_layout-overrides.scss
+++ b/src/style/partials/_layout-overrides.scss
@@ -142,3 +142,7 @@ pre {
     font-family: inherit;
     font-size: $font-size-base;
 }
+
+.no-scroll {
+    overflow: hidden;
+}
